  * This was previously done by default but may negatively impact loading speed
  * Should only be activated when specifically required
    - Should not be required on most firmware
  * This option currently always disabled on Apple firmware
- Adds `HaltSeconds` Function
  * As `PauseSeconds` but does not terminate on keypress
- Improves `TransientBoot` Feature
  * Now removes pre-existing `PreviousBoot` instances
- Improves `DirectBoot` Feature
  * Minimises screen shudder when `ESC` key is held down to override DirectBoot
- Improves `ScreenShot` Feature
  * Properly limited to one (1) sreenshot per keypress
    - Removes limitation of key press not continuing beyond the on-screen message display
  * Fixes Screenshots being only functional for the main screen
    - This bug was introduced in v0.13.2.AN (Commit 99da7ce)
- Improves `ProtectNVRAM` Feature
  * Now clears existing instances of blocked variables
  * Adds `UnlockID` and `UnlockIDCopy` to filtered items
    - These are not certificates but work in concert with the certificates
    - Not required once certificates are filtered and additionally, filtering these reduces NVRAM writes
- Improves Identification of Linux Instances
  * `vmlinuz`, `bzImage`, and `kernel` loaders are now accounted for as Linux loaders
  * Hence the `ProtectNVRAM` feature is not applied to such loaders
  * The `grub` loader was already accounted for
- Improves OS Boot Filtering
  * The `OSType` flag is now taken into account
- Improves Load Error/Warning Display
  * The `ContinueOnWarning` feature is forced on temporarily if required
- Removes `BootKicker` feature
  * The feature was added as part of attempts to allow the MacPro5,1 to show the RefindPlus screen
  * This was ultimately achieved via other means
  * The feature never actually worked properly and hence, there is no need for it to remain
- Amends Default Loader Scan for APFS Support Volumes